--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- bootstrap, jquery end -->
     <script src="javascript/mathquill.min.js"></script>	
     <script src="javascript/chat.js"></script>
-    <style> @import url("css/mathquill.css")</style>   
-    <style> @import url("css/style.css")</style>
+    <style> @import url("stylesheets/mathquill.css")</style>   
+    <style> @import url("stylesheets/style.css")</style>
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
