--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <!-- bootstrap, jquery end -->
-    <script src="javascript/mathquill.min.js"></script>	
-    <script src="javascript/chat.js"></script>
+    <script src="javascripts/mathquill.min.js"></script>	
+    <script src="javascripts/chat.js"></script>
     <style> @import url("stylesheets/mathquill.css")</style>   
     <style> @import url("stylesheets/style.css")</style>
 
