--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</a>
 			</div>
 			<div class="btn-group pull-right" data-toggle="tooltip" title="Minimize">
-				<a role="button" onclick="toggleChat()" class="btn btn-default btn-sm collapsed" data-toggle="collapse" data-parent="#chat" href="#collapseChat" aria-expanded="false">
+				<a role="button" class="btn btn-default btn-sm collapsed" data-toggle="collapse" data-parent="#chat" href="#collapseChat" aria-expanded="false">
 					<span class="glyphicon glyphicon-minus"></span>
 				</a>
 			</div>
