Simplified the setup
The chat client should now work on a standard ubuntu php server
by just copying the project to the server root.

I removed stripslashes() from chat-server.php since it caused
problems with latex commands like "\sqrt".

--- a/html/chatwindow.html
+++ b/html/chatwindow.html
@@ -11,19 +11,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-	<script src="javascripts/mathquill.min.js"></script>
-	<script src="javascripts/chat.js"></script>
-	<link rel="stylesheet" href="stylesheets/mathquill.css">
-	<script>
-		function resizeChat() {
-			document.getElementById("history").style.height = window.innerHeight - $("#chatHeading").height() - $("#messageArea").height()
-				- parseInt($("#history").css("padding-top")) - 2*parseInt($("#history").css("padding-bottom"))+"px";
-			scrollToBottom();
-		}
-		jQuery(document).ready(function($) {
-			resizeChat();
-		});
-	</script>
+	<script src="../javascripts/mathquill.min.js"></script>
+	<script src="../javascripts/chat.js"></script>
+	<link rel="stylesheet" href="../stylesheets/mathquill.css">
 	
 	<style>
     html, body, .chat {
@@ -106,7 +96,16 @@
 	
 </div> <!-- chat end -->
 
-
+	<script>
+		function resizeChat() {
+			document.getElementById("history").style.height = window.innerHeight - $("#chatHeading").height() - $("#messageArea").height()
+				- parseInt($("#history").css("padding-top")) - 2*parseInt($("#history").css("padding-bottom"))+"px";
+			scrollToBottom();
+		}
+		jQuery(document).ready(function($) {
+			resizeChat();
+		});
+	</script>
 </body>
 
 </html> 
