--- a/html/chatwindow.html
+++ b/html/chatwindow.html
@@ -4,8 +4,8 @@
 	<title>Chat</title>
 	<meta charset="UTF-8">
 	<link rel="icon" type="image/x-icon" href="images/logo.png" />
-	  
-	<!-- Bootstrap and jQuery -->  
+
+	<!-- Bootstrap and jQuery -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -14,14 +14,14 @@
 	<script src="../javascripts/mathquill.min.js"></script>
 	<script src="../javascripts/chat.js"></script>
 	<link rel="stylesheet" href="../stylesheets/mathquill.css">
-	
+
 	<style>
     html, body, .chat {
       height: 100vh;
       overflow: hidden;
       padding: 0;
     }
-	
+
     .panel {
       height: 100vh;
       width: 100%;
@@ -31,27 +31,27 @@
     .panel-body {
       overflow-y: auto;
       height: 100%;
-    }	
-	
+    }
+
     .panel-footer {
       position: absolute;
       bottom: 0;
       width: 100%;
     }
-    
+
     #message {
       height: auto;
     }
-	
+
     .mathquill-rendered-math * {
       box-sizing: content-box;
       top: auto;
     }
-	
+
     .mathquill-editable {
       display: block;
     }
-	
+
     .mathquill-textbox textarea{
       position: absolute;
       clip: rect(1em 1em 1em 1em);
@@ -60,52 +60,79 @@
 </head>
 
 <body onresize="resizeChat()">
+
 <!-- The chat -->
 <div class="chat">
-	<div class="panel panel-default" id="chat-body" style="display:none">
+	<div class="panel panel-default">
 		<div class="panel-heading" id="chatHeading">
-			<h4>Chatt</h4>
+			<span class="panel-title">Chat</span>
+      <div class="btn-group pull-right" data-toggle="tooltip" title="Settings">
+        <a role="button" onclick="showSettings()" class="btn btn-default btn-sm" id="settings-btn">
+          <span class="glyphicon glyphicon-cog"></span>
+        </a>
+      </div>
 		</div>
-		
-		<div class="panel-body" id="history">
-		<!-- Here goes the chat history -->
-		</div>
-		
-		<div class="panel-footer" id="messageArea">
-			<div class="input-group input-group-sm">
-				<span id="message" class="mathquill-textbox form-control" onkeydown="checkEnterSendMessage(event)"></span>
-				<span class="input-group-btn">
-					<input value="Send" class="btn btn-default" onclick="sendMessage()" type="button">
-				</span>
-			</div>
-  		</div>			
-	</div>
-	
-	<!-- nickname chooser -->
-	<div class="form-group panel-body" id="nickchooser">
-			
-		<label for="nickname">Choose nickname:</label>
-		<div class="input-group input-group-sm">
-			<input type="text" class="form-control" id="nickname" onkeydown="checkEnterSetNick(event)">
-			<span class="input-group-btn">
-				<button type="button" class="btn btn-default" onclick="setNick()">Ok</button>
-			</span>
-		</div>
-	</div>
 
-	
+    <!-- chat history and message area -->
+    <div id="chat-body" style="display:none">
+
+      <div class="panel-body" id="history">
+        <!-- Here goes the chat history -->
+      </div>
+
+      <div class="panel-footer" id="messageArea">
+        <form>
+          <div class="input-group input-group-sm">
+            <span id="message" class="mathquill-textbox form-control" onkeydown="checkEnterSendMessage(event)"></span>
+            <span class="input-group-btn">
+              <input value="Send" class="btn btn-default" onclick="sendMessage()" type="button">
+            </span>
+          </div>
+        </form>
+
+      </div>
+    </div> <!-- chat-body -->
+
+    <!-- settings -->
+    <form id="settings" style="display: none;">
+      <div class="panel-body">
+        <div class="form-group">
+          <label for="nickname">Nickname:</label>
+          <input type="text" class="form-control" id="settings-nick">
+        </div>
+
+        <div class="form-group">
+          <button type="button" class="btn btn-default" onclick="showChat()">Back</button>
+          <button type="button" class="btn btn-primary pull-right" onclick="applySettings()">Apply</button>
+        </div>
+      </div>
+
+      <div class="panel-footer">
+        <a role="button" class="btn btn-default btn-sm" href="#" data-toggle="tooltip" title="Help">
+          <span class="glyphicon glyphicon-question-sign"></span>
+        </a>
+      </div>
+    </form> <!-- settings -->
+
+    <!-- nickname chooser -->
+    <form id="nickchooser">
+      <div class="form-group panel-body">
+
+        <label for="nickname">Nickname:</label>
+        <div class="input-group input-group-sm">
+          <input type="text" class="form-control" id="nick" onkeydown="checkEnterSetNick(event)">
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" onclick="setNick()">Ok</button>
+          </span>
+        </div>
+      </div>
+    </form>
+
+  </div> <!-- panel -->
+
 </div> <!-- chat end -->
 
-	<script>
-		function resizeChat() {
-			document.getElementById("history").style.height = window.innerHeight - $("#chatHeading").height() - $("#messageArea").height()
-				- parseInt($("#history").css("padding-top")) - 2*parseInt($("#history").css("padding-bottom"))+"px";
-			scrollToBottom();
-		}
-		jQuery(document).ready(function($) {
-			resizeChat();
-		});
-	</script>
+
 </body>
 
-</html> 
+</html>
