--- a/html/chatwindow.html
+++ b/html/chatwindow.html
@@ -15,122 +15,140 @@
 	<script src="../javascripts/chat.js"></script>
 	<link rel="stylesheet" href="../stylesheets/mathquill.css">
 
+	<script>
+	function resizeChat() {
+		document.getElementById("history").style.height =
+		window.innerHeight - $("#chatHeading").height() - $("#messageArea").height() -
+		parseInt($("#history").css("padding-top")) - 2*parseInt($("#history").css("padding-bottom"))+"px";
+		scrollToBottom();
+	}
+	$(window).load( function() {
+		resizeChat();
+	});
+	</script>
+
 	<style>
-    html, body, .chat {
-      height: 100vh;
-      overflow: hidden;
-      padding: 0;
-    }
+	html, body, .chat {
+		height: 100vh;
+		overflow: hidden;
+		padding: 0;
+	}
 
-    .panel {
-      height: 100vh;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-    }
-    .panel-body {
-      overflow-y: auto;
-      height: 100%;
-    }
 
-    .panel-footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-    }
+	.panel {
+		height: 100vh;
+		width: 100%;
+		margin: 0;
+		padding: 0;
+	}
 
-    #message {
-      height: auto;
-    }
+	.panel-body
+	{
+		overflow-y: auto;
+		height: 100%;
+	}
 
-    .mathquill-rendered-math * {
-      box-sizing: content-box;
-      top: auto;
-    }
+	.panel-footer {
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+	}
+	#message {
+		height: auto;
+	}
 
-    .mathquill-editable {
-      display: block;
-    }
+	.mathquill-rendered-math * {
+		box-sizing: content-box;
+		top: auto;
+	}
 
-    .mathquill-textbox textarea{
-      position: absolute;
-      clip: rect(1em 1em 1em 1em);
-    }
-  </style>
+	.mathquill-editable {
+		display: block;
+	}
+
+	.mathquill-textbox textarea{
+		position: absolute;
+		clip: rect(1em 1em 1em 1em);
+	}
+
+	.emathdisplaymode .emdisplaymode-content {
+		width: 100%;
+	}
+	</style>
 </head>
 
 <body onresize="resizeChat()">
 
-<!-- The chat -->
-<div class="chat">
-	<div class="panel panel-default">
-		<div class="panel-heading" id="chatHeading">
-			<span class="panel-title">Chat</span>
-      <div class="btn-group pull-right" data-toggle="tooltip" title="Settings">
-        <a role="button" onclick="showSettings()" class="btn btn-default btn-sm" id="settings-btn">
-          <span class="glyphicon glyphicon-cog"></span>
-        </a>
-      </div>
-		</div>
+	<!-- The chat -->
+	<div class="chat">
+		<div class="panel panel-default">
+			<div class="panel-heading" id="chatHeading">
+				<span class="panel-title">Chat</span>
+				<div class="btn-group pull-right" data-toggle="tooltip" title="Settings">
+					<a role="button" onclick="showSettings()" class="btn btn-default btn-sm" id="settings-btn">
+						<span class="glyphicon glyphicon-cog"></span>
+					</a>
+				</div>
+			</div>
 
-    <!-- chat history and message area -->
-    <div id="chat-body" style="display:none">
+			<!-- chat history and message area -->
+			<div id="chat-body" style="display:none">
 
-      <div class="panel-body" id="history">
-        <!-- Here goes the chat history -->
-      </div>
+				<div class="panel-body" id="history">
+					<!-- Here goes the chat history -->
+				</div>
 
-      <div class="panel-footer" id="messageArea">
-        <form>
-          <div class="input-group input-group-sm">
-            <span id="message" class="mathquill-textbox form-control" onkeydown="checkEnterSendMessage(event)"></span>
-            <span class="input-group-btn">
-              <input value="Send" class="btn btn-default" onclick="sendMessage()" type="button">
-            </span>
-          </div>
-        </form>
+				<div class="panel-footer" id="messageArea">
+					<form>
+						<div class="input-group input-group-sm">
+							<span id="message" class="mathquill-textbox form-control" onkeydown="checkEnterSendMessage(event)"></span>
+							<span class="input-group-btn">
+								<input value="Send" class="btn btn-default" onclick="sendMessage()" type="button">
+							</span>
+						</div>
+					</form>
 
-      </div>
-    </div> <!-- chat-body -->
+				</div>
+			</div> <!-- chat-body -->
 
-    <!-- settings -->
-    <form id="settings" style="display: none;">
-      <div class="panel-body">
-        <div class="form-group">
-          <label for="nickname">Nickname:</label>
-          <input type="text" class="form-control" id="settings-nick">
-        </div>
+			<!-- settings -->
+			<form id="settings" style="display: none;">
+				<div class="panel-body">
+					<div class="form-group">
+						<label for="nickname">Nickname:</label>
+						<input type="text" class="form-control" id="settings-nick">
+					</div>
 
-        <div class="form-group">
-          <button type="button" class="btn btn-default" onclick="showChat()">Back</button>
-          <button type="button" class="btn btn-primary pull-right" onclick="applySettings()">Apply</button>
-        </div>
-      </div>
+					<div class="form-group">
+						<button type="button" class="btn btn-default" onclick="showChat()">Back</button>
+						<button type="button" class="btn btn-primary pull-right" onclick="applySettings()">Apply</button>
+					</div>
+				</div>
 
-      <div class="panel-footer">
-        <a role="button" class="btn btn-default btn-sm" href="#" data-toggle="tooltip" title="Help">
-          <span class="glyphicon glyphicon-question-sign"></span>
-        </a>
-      </div>
-    </form> <!-- settings -->
+				<div class="panel-footer">
+					<a role="button" class="btn btn-default btn-sm" href="#" data-toggle="tooltip" title="Help">
+						<span class="glyphicon glyphicon-question-sign"></span>
+					</a>
+				</div>
+			</form> <!-- settings -->
 
-    <!-- nickname chooser -->
-    <form id="nickchooser">
-      <div class="form-group panel-body">
+			<!-- nickname chooser -->
+			<form id="nickchooser">
+				<div class="form-group panel-body">
 
-        <label for="nickname">Nickname:</label>
-        <div class="input-group input-group-sm">
-          <input type="text" class="form-control" id="nick" onkeydown="checkEnterSetNick(event)">
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" onclick="setNick()">Ok</button>
-          </span>
-        </div>
-      </div>
-    </form>
+					<label for="nickname">Nickname:</label>
+					<div class="input-group input-group-sm">
+						<input type="text" class="form-control" id="nick" onkeydown="checkEnterSetNick(event)">
+						<span class="input-group-btn">
+							<button type="button" class="btn btn-default" onclick="setNick()">Ok</button>
+						</span>
+					</div>
+				</div>
+			</form>
 
-  </div> <!-- panel -->
+		</div> <!-- panel -->
 
-</div> <!-- chat end -->
+	</div> <!-- chat end -->
 
 
 </body>
