--- a/public/index.html
+++ b/public/index.html
@@ -90,9 +90,9 @@
 				<div class="panel-footer" id="messageArea">
 					<form id=message-form>
 						<div class="input-group input-group-sm">
-							<span id="message" class="mathquill-textbox form-control"></span>
+							<span id="message" class="mathquill-textbox form-control" onkeydown="checkEnterSendMessage(event)"></span>
 							<span class="input-group-btn">
-								<input type="submit" value="Send" class="btn btn-default" type="button">
+								<input id="send" type="submit" value="Send" class="btn btn-default" type="button">
 							</span>
 						</div>
 					</form>
