Enabled nickname chooser

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 			</div>
 
 			<!-- chat history and message area -->
-			<div id="chat-body">
+			<div id="chat-body" style="display: none;">
 
 				<div class="panel-body" id="history">
 					<!-- Here goes the chat history -->
@@ -121,7 +121,7 @@
 			</form> <!-- settings -->
 
 			<!-- nickname chooser -->
-			<form id="nickchooser" style="display: none;">
+			<form id="nickchooser">
 				<div class="form-group panel-body">
 
 					<label for="nickname">Nickname:</label>
