--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 
     <!-- Bootstrap and jQuery -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <!-- bootstrap, jquery end -->
     <script src="javascripts/mathquill.min.js"></script>
     <script src="javascripts/chat.js"></script>
